ros2_wshesh/log/build_2025-09-10_15-01-16/turtle_pkg/stderr.log
  File "/ros2_wshesh/install/turtle_pkg/lib/python3.12/site-packages/turtle_pkg/ControlsPublisher.py", line 17
    self.publisher_.publish(msg)
    ^^^^
SyntaxError: expected 'except' or 'finally' block

